# fb-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.py  pyproject.toml
fb-cpp/: monster.cpp  monster_generated.h
fb-py/: main.py
fb-py/FbDemo/Sample/: Monster.py  Vec3.py
fb-rs/: Cargo.toml
fb-rs/src/: main.rs  monster_generated.rs
schema/: monster.fbs
